syntax = "proto3";

package discovery.v1;

import "discovery/v1/models.proto";

option go_package = "github.com/vladovsiychuk/demo-grpc/protob/discovery/v1;pbdiscovery";

service DiscoveryService {
  rpc AddPost(AddPostRequest) returns (AddPostResponse) {}
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
}
